objects/CustomSettingListType1Obj__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>list custom settings</description>
    <fields>
        <fullName>Customer_Info_text__c</fullName>
        <label>Customer_Info_text</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Phone_Number__c</fullName>
        <label>Customer_Phone_Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>desc__c</fullName>
        <label>desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CustomSettingListType1</label>
</CustomObject>